# CG

./: .gitignore  README.md  index.html  pathtracer.js
.github/workflows/: build.yml  release.yml
App/Source/: Renderer.h  Shader.h
code/: CMakeLists.txt  Makefile  README.md  spheres_web.html
code/App/: CMakeLists.txt
code/App/Shaders/: Compute.glsl  Spheres.glsl
code/App/Shaders/PathTrace/: Accumulate.glsl  Display.glsl  PathTrace.glsl  Vertex.glsl
code/App/Shaders/Spheres/: Fragment.glsl  Vertex.glsl
code/App/Source/: Main.cpp  Renderer.cpp  SceneManager.h  Shader.cpp
code/App/Source/Math/: MonteCarlo.cpp  MonteCarlo.h  Ray.cpp  Ray.h  Utils.cpp  Utils.h  Vec3.cpp  Vec3.h
code/App/Source/Quadric/: Quadric.cpp  Quadric.h  QuadricTest.cpp  README.md  quadric_test  test.sh
code/App/Source/QuadricManager/: QuadricManager.cpp  QuadricManager.h
code/App/Source/SceneManager/: FileManager.cpp  FileManager.h  SceneManager.cpp
code/App/Source/SceneManager/SceneManagerTest/: CMakeLists.txt  README.md  SceneManagerTest.cpp  test.sh
code/App/assets/: cornell_box.mtl  quadric_materials.mtl
code/docs/: OBJ_SCENE_LOADING.md  QUADRICS.md  QUADRIC_EXAMPLES.cpp  USER_GUIDE_QUADRICS.md
code/scripts/: package-release.sh
web/: index.html  pathtracer.js  spheres_web.html
